--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "type": "git",
     "url": "git://github.com/mxstbr/react-boilerplate.git"
   },
-  "engines": {
-    "npm": ">=3"
+  "engines" : {
+    "npm" : ">=3"
   },
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
+    "postinstall": "npm run build:dll",
     "prebuild": "npm run test && npm run build:clean",
     "build:clean": "rimraf ./build/*",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "analyze": "node ./internals/scripts/analyze.js",
+    "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "npm run start:tunnel",
     "start:tunnel": "cross-env NODE_ENV=development node server",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -51,9 +53,7 @@
     ],
     "env": {
       "production": {
-        "only": [
-          "app"
-        ],
+        "only": ["app"],
         "plugins": [
           "transform-react-remove-prop-types",
           "transform-react-constant-elements",
@@ -98,12 +98,15 @@
       "indentation": 2
     }
   },
+  "dllPlugin": {
+    "exclude": ["express","chalk","compression"],
+    "include": ["core-js", "eventsource-polyfill", "lodash"]
+  },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "chalk": "^1.1.3",
     "compression": "^1.6.1",
     "express": "^4.13.4",
-    "file-loader": "^0.8.5",
     "fontfaceobserver": "^1.7.1",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
@@ -171,6 +174,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "lint-staged": "^1.0.0",
+    "lodash": "^4.13.1",
     "mocha": "^2.4.5",
     "ngrok": "2.1.8",
     "null-loader": "^0.1.1",
